# marbot-academic-bot

./: .gitignore  README.md
backend/: Cargo.toml  README.md  schedule.json
backend/migrations/: 20251221142621_init_schema.down.sql  20251221142621_init_schema.up.sql
backend/src/: clarification.rs  classifier.rs  main.rs  models.rs  scheduler.rs  whitelist.rs
backend/src/database/: crud.rs  mod.rs  pool.rs
backend/src/parser/: ai_extractor.rs  commands.rs  mod.rs
backend/src/parser/ai_extractor/: context_builder.rs  core.rs  mod.rs  parsing.rs  prompts.rs  schedule_oracle.rs
waha/: README.md  docker-compose.yml
