[package]
name = "whatsapp-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7" 
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json" ] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }